width -> max-width

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </p>
     <a href="/discord_dump.html">Full Discord Logs</a>
     <a href="https://www.unddit.com/r/Gta5Modding/comments/vc4btw/im_gonna_puke/">Reddit Archive</a>
-    <img src="/1/IMG_1724.jpg" alt="" style="width: 50rem" />
-    <img src="1/unknown.png" alt="" style="width: 30rem" />
+    <img src="/1/IMG_1724.jpg" alt="" style="max-width: 50rem" />
+    <img src="1/unknown.png" alt="" style="max-width: 30rem" />
     <h2>Reddit Screenshots</h2>
     <img src="2/final_1.png" alt="" style="max-width: 40rem" />
     <img src="2/final.png" alt="" style="max-width: 40rem" />
