--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </p>
     <a href="/discord_dump.html">Full Discord Logs</a>
     <a href="https://www.unddit.com/r/Gta5Modding/comments/vc4btw/im_gonna_puke/">Reddit Archive</a>
-    <img src="/1/IMG_1724.jpg" alt="" style="max-width: 50rem" />
-    <img src="1/unknown.png" alt="" style="max-width: 30rem" />
+    <img src="/1/IMG_1724.jpg" alt="" />
+    <img src="1/unknown.png" alt="" />
     <h2>Reddit Screenshots</h2>
-    <img src="2/final_1.png" alt="" style="max-width: 40rem" />
-    <img src="2/final.png" alt="" style="max-width: 40rem" />
-    <img src="2/final_2.png" alt="" style="max-width: 40rem" />
+    <img src="2/final_1.png" alt="" />
+    <img src="2/final.png" alt="" />
+    <img src="2/final_2.png" alt="" />
     <h2>Reddit Moderators Censorship</h2>
-    <img src="2/delet.png" alt="" style="max-width: 40rem" />
+    <img src="2/delet.png" alt="" />
   </body>
   <style>
     body {
@@ -34,6 +34,11 @@
       flex-direction: column;
       gap: 1rem;
       object-fit: contain;
+      max-width: 100vw;
+    }
+
+    img {
+      max-width: min(90vw, 40rem);
     }
   </style>
 </html>
