--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Timmy is a pedo</title>
   </head>
   <body>
+    <a href="https://orbitcheats.com">
+      <h1>Buy Orbit</h1>
+    </a>
     <p style="max-width: 50rem; text-align: center">
       This site contains almost all relevant information regarding the events that unfolded during the 14th of June
       2022, proving that Tim Speckhals (Stand's developer) is nothing more than a pedophile with a god complex, who aims
