balls in my mouth

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="https://orbitcheats.com">
       <h1>Buy Orbit</h1>
     </a>
+
+    <h4>Update: <a href="/hiring_ddoser.html">Timmy tryna DDOS 2take1</a></h4>
+
     <p style="max-width: 50rem; text-align: center">
       This site contains almost all relevant information regarding the events that unfolded during the 14th of June
       2022, proving that Tim Speckhals (Stand's developer) is nothing more than a pedophile with a god complex, who aims
