--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       <h1>Buy Orbit</h1>
     </a>
 
+    <h4>More updates</h4>
+    <p>Timmy giving special roles to people that post pics of themselves (often) naked</p>
+    <img src="https://media.discordapp.net/attachments/987210233078239273/987257495217111060/unknown.png" alt="">
+    <img src="https://media.discordapp.net/attachments/987210233078239273/987257181927768064/unknown.png" alt="">
+
+    <p>Stand staff actual <b>rapist</b></p>
+    <img src="https://media.discordapp.net/attachments/987210233078239273/987257865473519626/unknown.png" alt="">
+
+
     <h4>Update: <a href="/hiring_ddoser.html">Timmy tryna DDOS 2take1</a></h4>
 
     <p style="max-width: 50rem; text-align: center">
